EntityManger Persist -code refactor