@@ -1,51 +1,107 @@
 package com.breskul.bibernate.persistence;
 
-import com.breskul.bibernate.annotation.GeneratedValue;
-import com.breskul.bibernate.annotation.Strategy;
 import com.breskul.bibernate.exception.JdbcDaoException;
+import com.breskul.bibernate.persistence.util.DaoUtils;
+import com.breskul.bibernate.persistence.util.Node;
+import lombok.extern.slf4j.Slf4j;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import javax.sql.DataSource;
 import java.lang.reflect.Field;
-import java.sql.Connection;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.sql.Statement;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.sql.*;
+import java.util.*;
 
-import static com.breskul.bibernate.persistence.util.DaoUtils.getClassTableName;
-import static com.breskul.bibernate.persistence.util.DaoUtils.getFieldValue;
-import static com.breskul.bibernate.persistence.util.DaoUtils.isValidEntity;
+import static com.breskul.bibernate.persistence.util.DaoUtils.*;
 
+@Slf4j
 public class JdbcDao {
     private static final Logger logger = LoggerFactory.getLogger(JdbcDao.class);
-    private final DataSource dataSource;
     private static final String DELETE_STATEMENT = "DELETE FROM %s WHERE %s = ?";
     private static final String INSERT_QUERY = "INSERT INTO %s (%s) VALUES (%s)";
     private static final String SELECT_SEQ_QUERY = "SELECT nextval('%s_seq')";
-    protected static final Map<Object, Object> ENTITY_ID_MAP = new HashMap<>();
-    private static final String H2_TABLE_NOT_FOUND_STATE = "42S02";
-    private static final String POSTGRES_TABLE_NOT_FOUND_STATE = "42P01";
+    private final DataSource dataSource;
 
     public JdbcDao(DataSource dataSource) {
         this.dataSource = dataSource;
     }
 
-    public static <T> Object findSequence(Class<T> type, DataSource dataSource) {
-        isValidEntity(type);
-        String tableName = getClassTableName(type);
-        String sequenceTable = SELECT_SEQ_QUERY.formatted(tableName);
+    public void persist(Object parentEntity)  {
+        Node parentNode = buildTree(parentEntity);
+        var queue = new ArrayDeque<Node>();
+        queue.add(parentNode);
+        while (!queue.isEmpty()) {
+            var node = queue.poll();
+            var entity = node.entity();
+            var tableName = DaoUtils.resolveTableName(entity);
+            var sqlFieldNames = DaoUtils.getSqlFieldNames(entity);
+            var sqlFieldValues = DaoUtils.getSqlFieldValues(entity);
+
+            var identifierField = DaoUtils.getIdentifierField(entity.getClass());
+            if (isSequenceStrategy(entity)) {
+                var formattedSequenceQuery = String.format(SELECT_SEQ_QUERY, tableName);
+                long id = getSequenceId(formattedSequenceQuery);
+                sqlFieldNames = identifierField.getName() + "," + sqlFieldNames;
+                sqlFieldValues = id + "," + sqlFieldValues;
+            }
+            long id = insertEntity(tableName, sqlFieldNames, sqlFieldValues);
+            identifierField.setAccessible(true);
+            try {
+                identifierField.set(entity, id);
+            } catch (IllegalAccessException e) {
+                throw new RuntimeException(e);
+            }
+            queue.addAll(node.childes());
+
+
+
+        }
+
+    }
+    private Node buildTree(Object entityToSave) {
+        Node parentNode = new Node(entityToSave, new ArrayList<>());
+        var queue = new ArrayDeque<Node>();
+        queue.add(parentNode);
+        while (!queue.isEmpty()) {
+            var currentNode = queue.poll();
+            var currentEntity = currentNode.entity();
+            var childes = currentNode.childes();
+            List<Field> collectionFieldList = DaoUtils.getCollectionFields(currentEntity.getClass());
+            for (Field collectionField : collectionFieldList) {
+                if (DaoUtils.isCollectionField(collectionField)) {
+                    var childEntities = (Collection<?>) DaoUtils.getFieldValue(currentEntity, collectionField);
+                    for (var childEntity : childEntities) {
+                        var newNode = new Node(childEntity, new ArrayList<>());
+                        childes.add(newNode);
+                        queue.add(newNode);
+                    }
+                }
+
+            }
+        }
+        return parentNode;
+    }
+
+    public Long getSequenceId(String sequenceQuery) {
         try (Connection connection = dataSource.getConnection();
-             PreparedStatement preparedStatement = connection.prepareStatement(sequenceTable)) {
+             PreparedStatement preparedStatement = connection.prepareStatement(sequenceQuery)) {
             ResultSet resultSet = preparedStatement.executeQuery();
             resultSet.next();
-            return resultSet.getObject(1);
+            return resultSet.getLong(1);
         } catch (SQLException e) {
-            throw new JdbcDaoException("Can't find sequence %s".formatted(sequenceTable), "Make sure that sequence match the pattern 'tableName_seq'", e);
+            throw new JdbcDaoException("Can't execute query %s".formatted(sequenceQuery), "Make sure that sequence match the pattern 'tableName_seq'", e);
+        }
+    }
+
+    private Long insertEntity(String tableName, String sqlFieldNames, String sqlFieldValues) {
+        var formattedInsertSql = String.format(INSERT_QUERY, tableName, sqlFieldNames, sqlFieldValues);
+        try (var connection = dataSource.getConnection()) {
+            PreparedStatement preparedStatement = connection.prepareStatement(formattedInsertSql, Statement.RETURN_GENERATED_KEYS);
+            preparedStatement.executeUpdate();
+            preparedStatement.getGeneratedKeys().next();
+            return preparedStatement.getGeneratedKeys().getLong(1);
+        } catch (SQLException e) {
+            throw new RuntimeException(e);
         }
     }
 
@@ -63,62 +119,6 @@ public class JdbcDao {
             }
         } catch (SQLException e) {
             throw new JdbcDaoException(cause, solution, e);
-        }
-    }
-
-    public void executeInsert(Object entityToSave, List<Object> values, List<String> columns) {
-        String tableName = getClassTableName(entityToSave.getClass());
-        String insertQuery = formatQuery(tableName, INSERT_QUERY, columns, values);
-        try (Connection connection = dataSource.getConnection();
-             PreparedStatement preparedStatement = connection.prepareStatement(insertQuery, Statement.RETURN_GENERATED_KEYS)) {
-            setPreparedValues(values, preparedStatement);
-            preparedStatement.executeUpdate();
-            preparedStatement.getGeneratedKeys().next();
-            Object next = preparedStatement.getGeneratedKeys().getObject(1);
-            ENTITY_ID_MAP.put(entityToSave, next);
-        } catch (SQLException e) {
-            if (H2_TABLE_NOT_FOUND_STATE.equals(e.getSQLState()) || POSTGRES_TABLE_NOT_FOUND_STATE.equals(e.getSQLState())) {
-                throw new JdbcDaoException("Table %s not found".formatted(tableName), "Use @Table annotation to specify table's name", e);
-            }
-        }
-    }
-
-    public Object resolveEntityId(Object entityToSave, Field idField) {
-        Object savedEntityId = getFieldValue(entityToSave, idField);
-        if (idField.isAnnotationPresent(GeneratedValue.class)) {
-            if (savedEntityId != null) {
-                throw new JdbcDaoException("detached entity passed to persist: " + entityToSave.getClass().getName(), "Make sure that you don't set id manually when using @GeneratedValue");
-            } else {
-                Strategy strategy = idField.getAnnotation(GeneratedValue.class).strategy();
-                if (strategy.equals(Strategy.SEQUENCE)) {
-                    savedEntityId = findSequence(entityToSave.getClass(), dataSource);
-                }
-            }
-        } else if (savedEntityId == null) {
-            throw new JdbcDaoException("No id present for %s".formatted(entityToSave.getClass().getName()), "ids for this class must be manually assigned before calling save(): " + entityToSave.getClass().getName());
-        }
-        return savedEntityId;
-    }
-
-    private String formatQuery(String tableName, String query, List<String> columns, List<Object> values) {
-        StringBuilder stringBuilder = new StringBuilder();
-        for (int i = 0; i < values.size(); i++) {
-            stringBuilder.append("?");
-            if (i != values.size() - 1) {
-                stringBuilder.append(", ");
-            }
-        }
-
-        return query.formatted(tableName, String.join(", ", columns), stringBuilder.toString());
-    }
-
-    private void setPreparedValues(List<Object> values, PreparedStatement preparedStatement) throws SQLException {
-        for (int i = 0; i < values.size(); i++) {
-            try {
-                preparedStatement.setObject(i + 1, values.get(i));
-            } catch (Exception e) {
-                preparedStatement.setObject(i + 1, values.get(i), java.sql.Types.OTHER);
-            }
         }
     }
 }
